# turnaware

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml  live-smoke.yml  release.yml
.specify/: feature.json
.specify/memory/: constitution.md
docs/: STABILITY.md  integration.md
examples/: generic_host_demo.py  loader-snippet.md  read_the_room_demo.py
examples/evidence/: demo-gemini-3.1-flash-lite.txt
profiles/: open-floor.md
specs/001-core-cli-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-cli-mvp/checklists/: admission-gate.md  requirements.md
specs/001-core-cli-mvp/contracts/: admission-cli.md
specs/002-admission-classifier/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-admission-classifier/checklists/: admission-classifier.md  requirements.md
specs/002-admission-classifier/contracts/: admission-classifier.md
specs/003-classifier-test-suite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-classifier-test-suite/checklists/: requirements.md
specs/004-read-the-room-adapter/: spec.md
specs/005-ci-packaging-docs/: spec.md
src/turnaware/: __init__.py  __main__.py  classifiers.py  cli.py  core.py  errors.py  fastpath.py  models.py  schema.py
src/turnaware/adapters/: __init__.py  __main__.py  (+1 more)
tests/: __init__.py  provider_helpers.py  test_003_runner.py  test_adapter_channel.py  test_classifiers.py  test_cli.py  test_core.py  test_fastpath.py  test_pass_corroboration.py  test_provider_classifier.py  test_schema.py
tests/fixtures/: ack.json  ask.json  false_ack_comment_back.json  false_pass_contradicted_done.json  false_pass_no_corroboration.json  invalid_classifier.json  pass.json  speak.json  speak_cli_precedence.json  speak_with_classifier.json
(+81 files in other folders)
