[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turnaware"
version = "0.1.0"
description = "Portable pre-reply admission gate for turn-aware agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [
  { name = "TurnAware contributors" }
]
dependencies = []

[project.scripts]
turnaware = "turnaware.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
